// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkText should pass down unknown props 1`] = `
<DocumentFragment>
  <span
    class="bpk-text bpk-text--body-default"
    style="color: red;"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </span>
</DocumentFragment>
`;

exports[`BpkText should render correctly 1`] = `
<DocumentFragment>
  <span
    class="bpk-text bpk-text--body-default"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </span>
</DocumentFragment>
`;

exports[`BpkText should render correctly with tageName="h1", textStyle="xxl" 1`] = `
<DocumentFragment>
  <h1
    class="bpk-text bpk-text--xxl"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </h1>
</DocumentFragment>
`;

exports[`BpkText should render correctly with tageName="text" 1`] = `
<DocumentFragment>
  <text
    class="bpk-text bpk-text--body-default"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </text>
</DocumentFragment>
`;

exports[`BpkText should render correctly with textStyle="base" 1`] = `
<DocumentFragment>
  <span
    class="bpk-text bpk-text--base"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </span>
</DocumentFragment>
`;

exports[`BpkText should render correctly with textStyle="lg" 1`] = `
<DocumentFragment>
  <span
    class="bpk-text bpk-text--lg"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </span>
</DocumentFragment>
`;

exports[`BpkText should render correctly with textStyle="sm" 1`] = `
<DocumentFragment>
  <span
    class="bpk-text bpk-text--sm"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </span>
</DocumentFragment>
`;

exports[`BpkText should render correctly with textStyle="xl" 1`] = `
<DocumentFragment>
  <span
    class="bpk-text bpk-text--xl"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </span>
</DocumentFragment>
`;

exports[`BpkText should render correctly with textStyle="xs" 1`] = `
<DocumentFragment>
  <span
    class="bpk-text bpk-text--xs"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </span>
</DocumentFragment>
`;

exports[`BpkText should render correctly with textStyle="xxl" 1`] = `
<DocumentFragment>
  <span
    class="bpk-text bpk-text--xxl"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </span>
</DocumentFragment>
`;

exports[`BpkText should render correctly with textStyle="xxxl" 1`] = `
<DocumentFragment>
  <span
    class="bpk-text bpk-text--xxxl"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </span>
</DocumentFragment>
`;

exports[`BpkText should render correctly with textStyle="xxxxl" 1`] = `
<DocumentFragment>
  <span
    class="bpk-text bpk-text--xxxxl"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </span>
</DocumentFragment>
`;

exports[`BpkText should render correctly with textStyle="xxxxxl" 1`] = `
<DocumentFragment>
  <span
    class="bpk-text bpk-text--xxxxxl"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </span>
</DocumentFragment>
`;
